<resources>
    <string name="app_name">Smash Soundboard</string>
    <string name="FOX_CHAR_CALL">android.resource://memes.smashsoundboard/raw/fox_char_call</string>
    <string name="FOX_CHEER">android.resource://memes.smashsoundboard/raw/fox_cheer</string>
    <string name="FOX_MISSION_COMPLETE">android.resource://memes.smashsoundboard/raw/fox_mission_complete</string>
    <string name="FOX_TAUNT">android.resource://memes.smashsoundboard/raw/fox_taunt</string>
    <string name="FOX_JP_TAUNT">android.resource://memes.smashsoundboard/raw/fox_jp_taunt</string>
    <string name="FOX_SMASH1">android.resource://memes.smashsoundboard/raw/fox_smash1</string>
    <string name="FOX_SMASH2">android.resource://memes.smashsoundboard/raw/fox_smash2</string>
    <string name="FOX_SMASH3">android.resource://memes.smashsoundboard/raw/fox_smash3</string>
    <string name="FOX_SMASH4">android.resource://memes.smashsoundboard/raw/fox_smash4</string>
    <string name="FOX_SMASH5">android.resource://memes.smashsoundboard/raw/fox_smash5</string>
    <string name="FOX_SPOT_DODGE">android.resource://memes.smashsoundboard/raw/fox_spot_dodge</string>
    <string name="FOX_LASER">android.resource://memes.smashsoundboard/raw/fox_laser</string>
    <string name="FOX_ILLUSION">android.resource://memes.smashsoundboard/raw/fox_illusion</string>
    <string name="FOX_SHINE">android.resource://memes.smashsoundboard/raw/fox_shine</string>
    <string name="FOX_FIREFOX">android.resource://memes.smashsoundboard/raw/fox_firefox</string>
    <string name="FOX_DAMAGE1">android.resource://memes.smashsoundboard/raw/fox_damage1</string>
    <string name="FOX_DAMAGE2">android.resource://memes.smashsoundboard/raw/fox_damage2</string>
    <string name="FOX_DAMAGE3">android.resource://memes.smashsoundboard/raw/fox_damage3</string>
    <string name="FOX_DEATH1">android.resource://memes.smashsoundboard/raw/fox_death1</string>
    <string name="FOX_DEATH2">android.resource://memes.smashsoundboard/raw/fox_death2</string>
    <string name="FOX_DEATH3">android.resource://memes.smashsoundboard/raw/fox_death3</string>
    <string name="FOX_STAR_KO">android.resource://memes.smashsoundboard/raw/fox_off_top</string>
    <string name="FOX_DOUBLE_JUMP">android.resource://memes.smashsoundboard/raw/fox_double_jump</string>
    <string name="FOX_GUN_DRAW">android.resource://memes.smashsoundboard/raw/fox_gun_draw</string>
    <string name="FOX_GUN_WITHDRAWAL">android.resource://memes.smashsoundboard/raw/fox_gun_withdrawal</string>
    <string name="FOX_MULTISHINE">android.resource://memes.smashsoundboard/raw/fox_shine</string>
    <string name="FALCO_CHAR_CALL">android.resource://memes.smashsoundboard/raw/falco_char_call</string>
    <string name="FALCO_CHEER">android.resource://memes.smashsoundboard/raw/falco_cheer</string>
    <string name="FALCO_MISSION_COMPLETE">android.resource://memes.smashsoundboard/raw/falco_mission_complete</string>
    <string name="FALCO_TAUNT">android.resource://memes.smashsoundboard/raw/falco_taunt</string>
    <string name="FALCO_SMASH1">android.resource://memes.smashsoundboard/raw/falco_smash1</string>
    <string name="FALCO_SMASH2">android.resource://memes.smashsoundboard/raw/falco_smash2</string>
    <string name="FALCO_SMASH3">android.resource://memes.smashsoundboard/raw/falco_smash3</string>
    <string name="FALCO_SMASH4">android.resource://memes.smashsoundboard/raw/falco_smash4</string>
    <string name="FALCO_SMASH5">android.resource://memes.smashsoundboard/raw/falco_smash5</string>
    <string name="FALCO_SPOT_DODGE">android.resource://memes.smashsoundboard/raw/falco_spot_dodge</string>
    <string name="FALCO_LASER">android.resource://memes.smashsoundboard/raw/falco_laser</string>
    <string name="FALCO_PHANTASM">android.resource://memes.smashsoundboard/raw/falco_phantasm</string>
    <string name="FALCO_SHINE">android.resource://memes.smashsoundboard/raw/falco_shine</string>
    <string name="FALCO_FIREBIRD">android.resource://memes.smashsoundboard/raw/falco_firebird</string>
    <string name="FALCO_DAMAGE1">android.resource://memes.smashsoundboard/raw/falco_damage1</string>
    <string name="FALCO_DAMAGE2">android.resource://memes.smashsoundboard/raw/falco_damage2</string>
    <string name="FALCO_DAMAGE3">android.resource://memes.smashsoundboard/raw/falco_damage3</string>
    <string name="FALCO_DEATH1">android.resource://memes.smashsoundboard/raw/falco_death1</string>
    <string name="FALCO_DEATH2">android.resource://memes.smashsoundboard/raw/falco_death2</string>
    <string name="FALCO_DEATH3">android.resource://memes.smashsoundboard/raw/falco_death3</string>
    <string name="FALCO_STAR_KO">android.resource://memes.smashsoundboard/raw/falco_off_top</string>
    <string name="FALCO_DOUBLE_JUMP">android.resource://memes.smashsoundboard/raw/falco_double_jump</string>
    <string name="FALCO_GUN_DRAW">android.resource://memes.smashsoundboard/raw/falco_gun_draw</string>
    <string name="FALCO_GUN_WITHDRAWAL">android.resource://memes.smashsoundboard/raw/falco_gun_withdrawal</string>
    <string name="FALCO_MULTISHINE">android.resource://memes.smashsoundboard/raw/falco_shine</string>
    <string name="SHEIK_CHAR_CALL">android.resource://memes.smashsoundboard/raw/sheik_char_call</string>
    <string name="SHEIK_CHEER">android.resource://memes.smashsoundboard/raw/sheik_cheer</string>
    <string name="SHEIK_VICTORY">android.resource://memes.smashsoundboard/raw/sheik_victory</string>
    <string name="SHEIK_TAUNT">android.resource://memes.smashsoundboard/raw/sheik_taunt</string>
    <string name="SHEIK_SMASH1">android.resource://memes.smashsoundboard/raw/sheik_smash1</string>
    <string name="SHEIK_SMASH2">android.resource://memes.smashsoundboard/raw/sheik_smash2</string>
    <string name="SHEIK_SMASH3">android.resource://memes.smashsoundboard/raw/sheik_smash3</string>
    <string name="SHEIK_SMASH4">android.resource://memes.smashsoundboard/raw/sheik_smash4</string>
    <string name="SHEIK_SMASH5">android.resource://memes.smashsoundboard/raw/sheik_smash5</string>
    <string name="SHEIK_SPOT_DODGE">android.resource://memes.smashsoundboard/raw/sheik_spot_dodge</string>
    <string name="SHEIK_NEUTRAL_B">android.resource://memes.smashsoundboard/raw/sheik_neutral_b</string>
    <string name="SHEIK_NEUTRAL_B_RELEASE">android.resource://memes.smashsoundboard/raw/sheik_neutral_b</string>
    <string name="SHEIK_SIDE_B">android.resource://memes.smashsoundboard/raw/sheik_side_b</string>
    <string name="SHEIK_DOWN_B">android.resource://memes.smashsoundboard/raw/sheik_down_b</string>
    <string name="SHEIK_UP_B">android.resource://memes.smashsoundboard/raw/sheik_up_b</string>
    <string name="SHEIK_DAMAGE1">android.resource://memes.smashsoundboard/raw/sheik_damage1</string>
    <string name="SHEIK_DAMAGE2">android.resource://memes.smashsoundboard/raw/sheik_damage2</string>
    <string name="SHEIK_DAMAGE3">android.resource://memes.smashsoundboard/raw/sheik_damage3</string>
    <string name="SHEIK_DEATH1">android.resource://memes.smashsoundboard/raw/sheik_death1</string>
    <string name="SHEIK_DEATH2">android.resource://memes.smashsoundboard/raw/sheik_death2</string>
    <string name="SHEIK_DEATH3">android.resource://memes.smashsoundboard/raw/sheik_death3</string>
    <string name="SHEIK_STAR_KO">android.resource://memes.smashsoundboard/raw/sheik_off_top</string>
    <string name="SHEIK_JUMP">android.resource://memes.smashsoundboard/raw/sheik_jump</string>
    <string name="MARTH_CHAR_CALL">android.resource://memes.smashsoundboard/raw/marth_char_call</string>
    <string name="MARTH_CHEER">android.resource://memes.smashsoundboard/raw/marth_cheer</string>
    <string name="MARTH_VICTORY">android.resource://memes.smashsoundboard/raw/marth_victory</string>
    <string name="MARTH_TAUNT">android.resource://memes.smashsoundboard/raw/marth_taunt</string>
    <string name="MARTH_SMASH1">android.resource://memes.smashsoundboard/raw/marth_smash1</string>
    <string name="MARTH_SMASH2">android.resource://memes.smashsoundboard/raw/marth_smash2</string>
    <string name="MARTH_SMASH3">android.resource://memes.smashsoundboard/raw/marth_smash3</string>
    <string name="PEACH_CHEER">android.resource://memes.smashsoundboard/raw/peach_cheer</string>
    <string name="PEACH_VICTORY">android.resource://memes.smashsoundboard/raw/peach_victory</string>
    <string name="PEACH_VICTORY2">android.resource://memes.smashsoundboard/raw/peach_victory2</string>
    <string name="PEACH_TAUNT">android.resource://memes.smashsoundboard/raw/peach_taunt</string>
    <string name="PEACH_SMASH1">android.resource://memes.smashsoundboard/raw/peach_smash1</string>
    <string name="PEACH_SMASH2">android.resource://memes.smashsoundboard/raw/peach_smash2</string>
    <string name="PEACH_SMASH3">android.resource://memes.smashsoundboard/raw/peach_smash3</string>
    <string name="PEACH_SMASH4">android.resource://memes.smashsoundboard/raw/peach_smash4</string>
    <string name="PEACH_SMASH5">android.resource://memes.smashsoundboard/raw/peach_smash5</string>
    <string name="PEACH_PAN">android.resource://memes.smashsoundboard/raw/peach_pan</string>
    <string name="PEACH_GOLF_CLUB">android.resource://memes.smashsoundboard/raw/peach_golf_club</string>
    <string name="PEACH_TENNIS_RACKET">android.resource://memes.smashsoundboard/raw/peach_tennis_racket</string>
    <string name="PEACH_JUMP">android.resource://memes.smashsoundboard/raw/peach_jump</string>
    <string name="PEACH_DOUBLE_JUMP">android.resource://memes.smashsoundboard/raw/peach_double_jump</string>
    <string name="PEACH_TOAD">android.resource://memes.smashsoundboard/raw/peach_toad</string>
    <string name="PEACH_BOMBER">android.resource://memes.smashsoundboard/raw/peach_bomber</string>
    <string name="PEACH_PULL">android.resource://memes.smashsoundboard/raw/peach_pull</string>
    <string name="PEACH_PARASOL">android.resource://memes.smashsoundboard/raw/peach_parasol</string>
    <string name="PEACH_DAMAGE">android.resource://memes.smashsoundboard/raw/peach_damage</string>
    <string name="PEACH_DEATH">android.resource://memes.smashsoundboard/raw/peach_death</string>
    <string name="PEACH_STAR_KO">android.resource://memes.smashsoundboard/raw/peach_star_ko</string>
    <string name="PEACH_SCREEN_KO">android.resource://memes.smashsoundboard/raw/peach_screen_ko</string>
    <string name="AUDIENCE_CHEER">audience cheer</string>
    <string name="VICTORY1">victory line 1</string>
    <string name="VICTORY2">victory line 2</string>
    <string name="TAUNT">Taunt</string>
    <string name="JP_TAUNT">JpTaunt</string>
    <string name="SMASH1">Smash Attack 1</string>
    <string name="SMASH2">Smash Attack 2</string>
    <string name="SMASH3">Smash Attack 3</string>
    <string name="SMASH4">Smash Attack 4</string>
    <string name="SMASH5">Smash Attack 5</string>
    <string name="SPOT_DODGE">Spot Dodge</string>
    <string name="NEUTRAL_SPECIAL">neutral special</string>
    <string name="SIDE_SPECIAL">side special</string>
    <string name="UP_SPECIAL">up special</string>
    <string name="DOWN_SPECIAL">down special</string>
    <string name="DAMAGE1">damage 1</string>
    <string name="DAMAGE2">damage 2</string>
    <string name="DAMAGE3">damage 3</string>
    <string name="DEATH1">death 1</string>
    <string name="DEATH2">death 2</string>
    <string name="DEATH3">death 3</string>
    <string name="STAR_KO">star KO</string>
    <string name="SCREEN_KO">screen KO</string>
    <string name="JUMP">jump</string>
    <string name="DOUBLE_JUMP">double jump</string>
    <string name="MULTISHINE">multishine</string>
    <string name="GUN_DRAW">gun draw</string>
    <string name="GUN_WITHDRAWAL">gun withdrawal</string>
    <string name="PEACH_FRYING_PAN">frying pan</string>
    <string name="PEACH_CLUB"> golf club</string>
    <string name="PEACH_RACKET">tennis racket</string>
</resources>