<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SoundActivityFox">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <Space
        android:id="@+id/align"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fox_palette"
        android:layout_centerHorizontal="true"
        android:id="@+id/fox_banner_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AUDIENCE_CHEER"
        android:id="@+id/fox_cheer_button"
        app:soundID="@string/FOX_CHEER"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_banner_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VICTORY1"
        android:id="@+id/fox_mission_complete_button"
        app:soundID="@string/FOX_MISSION_COMPLETE"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_banner_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TAUNT"
        android:id="@+id/fox_taunt_button"
        app:soundID="@string/FOX_TAUNT"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_cheer_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JP_TAUNT"
        android:id="@+id/fox_jp_taunt_button"
        app:soundID="@string/FOX_JP_TAUNT"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_mission_complete_button" />

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMASH1"
        android:id="@+id/fox_smash1_button"
        app:soundID="@string/FOX_SMASH1"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_taunt_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMASH2"
        android:id="@+id/fox_smash2_button"
        app:soundID="@string/FOX_SMASH2"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_jp_taunt_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMASH3"
        android:id="@+id/fox_smash3_button"
        app:soundID="@string/FOX_SMASH3"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_smash1_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMASH4"
        android:id="@+id/fox_smash4_button"
        app:soundID="@string/FOX_SMASH4"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_smash2_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMASH5"
        android:id="@+id/fox_smash5_button"
        app:soundID="@string/FOX_SMASH5"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_smash3_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SPOT_DODGE"
        android:id="@+id/fox_spot_dodge_button"
        app:soundID="@string/FOX_SPOT_DODGE"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_smash4_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NEUTRAL_SPECIAL"
        android:id="@+id/fox_laser_button"
        app:soundID="@string/FOX_LASER"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_smash5_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SIDE_SPECIAL"
        android:id="@+id/fox_illusion_button"
        app:soundID="@string/FOX_ILLUSION"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_spot_dodge_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UP_SPECIAL"
        android:id="@+id/fox_firefox_button"
        app:soundID="@string/FOX_FIREFOX"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_laser_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DOWN_SPECIAL"
        android:id="@+id/fox_shine_button"
        app:soundID="@string/FOX_SHINE"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_illusion_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DAMAGE1"
        android:id="@+id/fox_damage1_button"
        app:soundID="@string/FOX_DAMAGE1"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_firefox_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DAMAGE2"
        android:id="@+id/fox_damage2_button"
        app:soundID="@string/FOX_DAMAGE2"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_shine_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DAMAGE3"
        android:id="@+id/fox_damage3_button"
        app:soundID="@string/FOX_DAMAGE3"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_damage1_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DEATH1"
        android:id="@+id/fox_death1_button"
        app:soundID="@string/FOX_DEATH1"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_damage2_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DEATH2"
        android:id="@+id/fox_death2_button"
        app:soundID="@string/FOX_DEATH2"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_damage3_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DEATH3"
        android:id="@+id/fox_death3_button"
        app:soundID="@string/FOX_DEATH3"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_death1_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/STAR_KO"
        android:id="@+id/fox_off_top_button"
        app:soundID="@string/FOX_STAR_KO"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_death2_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DOUBLE_JUMP"
        android:id="@+id/fox_double_jump_button"
        app:soundID="@string/FOX_DOUBLE_JUMP"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_death3_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GUN_DRAW"
        android:id="@+id/fox_gun_draw_button"
        app:soundID="@string/FOX_GUN_DRAW"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/align"
        android:layout_below="@id/fox_off_top_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GUN_WITHDRAWAL"
        android:id="@+id/fox_gun_withdrawal_button"
        app:soundID="@string/FOX_GUN_WITHDRAWAL"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/align"
        android:layout_below="@id/fox_double_jump_button"/>

    <memes.smashsoundboard.SoundButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MULTISHINE"
        android:id="@+id/fox_multishine_button"
        app:soundID="@string/FOX_MULTISHINE"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fox_gun_draw_button"/>

</RelativeLayout>
</ScrollView>