<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SoundActivityPeach">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/peach_banner"
            android:background="@drawable/peach_palette" />

        <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

            <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <memes.smashsoundboard.SoundButton
                android:text="@string/AUDIENCE_CHEER"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/peach_cheer_button"
                app:soundID="@string/PEACH_CHEER"/>

            <memes.smashsoundboard.SoundButton
                android:text="@string/VICTORY1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/peach_victory1_button"
                app:soundID="@string/PEACH_VICTORY"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <memes.smashsoundboard.SoundButton
                android:text="@string/VICTORY2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/peach_victory2_button"
                app:soundID="@string/PEACH_VICTORY2"/>

            <memes.smashsoundboard.SoundButton
                android:text="@string/TAUNT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/peach_taunt_button"
                app:soundID="@string/PEACH_TAUNT"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <memes.smashsoundboard.SoundButton
                android:text="@string/SMASH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/peach_smash1_button"
                app:soundID="@string/PEACH_SMASH1"/>

            <memes.smashsoundboard.SoundButton
                android:text="@string/SMASH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/peach_smash2_button"
                app:soundID="@string/PEACH_SMASH2"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <memes.smashsoundboard.SoundButton
                android:text="@string/SMASH3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/peach_smash3_button"
                app:soundID="@string/PEACH_SMASH3"/>

            <memes.smashsoundboard.SoundButton
                android:text="@string/SMASH4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/peach_smash4_button"
                app:soundID="@string/PEACH_SMASH4"/>
        </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <memes.smashsoundboard.SoundButton
                    android:text="@string/SMASH5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_smash5_button"
                    app:soundID="@string/PEACH_SMASH5"/>

                <memes.smashsoundboard.SoundButton
                    android:text="@string/PEACH_FRYING_PAN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_pan_button"
                    app:soundID="@string/PEACH_PAN"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <memes.smashsoundboard.SoundButton
                    android:text="@string/PEACH_CLUB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_golf_club_button"
                    app:soundID="@string/PEACH_GOLF_CLUB"/>

                <memes.smashsoundboard.SoundButton
                    android:text="@string/PEACH_RACKET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_tennis_racket_button"
                    app:soundID="@string/PEACH_TENNIS_RACKET"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <memes.smashsoundboard.SoundButton
                    android:text="@string/JUMP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_jump_button"
                    app:soundID="@string/PEACH_JUMP"/>

                <memes.smashsoundboard.SoundButton
                    android:text="@string/DOUBLE_JUMP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_double_jump_button"
                    app:soundID="@string/PEACH_DOUBLE_JUMP"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <memes.smashsoundboard.SoundButton
                    android:text="@string/NEUTRAL_SPECIAL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_toad_button"
                    app:soundID="@string/PEACH_TOAD"/>

                <memes.smashsoundboard.SoundButton
                    android:text="@string/SIDE_SPECIAL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_bomber_button"
                    app:soundID="@string/PEACH_BOMBER"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <memes.smashsoundboard.SoundButton
                    android:text="@string/DOWN_SPECIAL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_pull_button"
                    app:soundID="@string/PEACH_PULL"/>

                <memes.smashsoundboard.SoundButton
                    android:text="@string/UP_SPECIAL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_parasol_button"
                    app:soundID="@string/PEACH_PARASOL"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <memes.smashsoundboard.SoundButton
                    android:text="@string/DAMAGE1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_damage_button"
                    app:soundID="@string/PEACH_DAMAGE"/>

                <memes.smashsoundboard.SoundButton
                    android:text="@string/DEATH1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_death_button"
                    app:soundID="@string/PEACH_DEATH"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <memes.smashsoundboard.SoundButton
                    android:text="@string/STAR_KO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_star_ko_button"
                    app:soundID="@string/PEACH_STAR_KO"/>

                <memes.smashsoundboard.SoundButton
                    android:text="@string/SCREEN_KO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/peach_screen_ko_button"
                    app:soundID="@string/PEACH_SCREEN_KO"/>

            </TableRow>
    </TableLayout>
    </LinearLayout>
</ScrollView>